modified the name text and position

--- a/css/style.css
+++ b/css/style.css
@@ -16,19 +16,21 @@ h1 {
   /* font-family: "Bebas Neue", cursive; */
   /* font-family: "Staatliches", cursive; */
   /* font-family: "Alfa Slab One", cursive; */
-  font-family: "Archivo Black", sans-serif;
+  /* font-family: "Archivo Black", sans-serif; */
+  font-family: "Monoton", cursive;
 
   display: inline-block;
-  transform: rotate(-90deg) translate(-40vh, -290px);
-  color: gray;
+  transform: rotate(-90deg) translate(-40vh, -330px);
+  color: black;
   font-size: 80px;
-  letter-spacing: 5px;
+  letter-spacing: 15px;
+  opacity: 0.3;
 }
 .nav {
   /* padding-top: 20px;
   padding-left: 70px; */
-  margin-top: -70px;
-  margin-left: 100px;
+  margin-top: -120px;
+  margin-left: 112px;
   width: min-content;
   height: min-content;
   text-align: left;
