--- a/css/style.css
+++ b/css/style.css
@@ -20,20 +20,26 @@ h1 {
   font-family: "Monoton", cursive;
 
   display: inline-block;
-  transform: rotate(-90deg) translate(-40vh, -330px);
-  color: black;
+  transform: rotate(-90deg) translate(-40vh, -300px);
+  color: #f0f8ff;
   font-size: 80px;
-  letter-spacing: 15px;
-  opacity: 0.3;
+  letter-spacing: 10px;
+  text-shadow: -7px 2px 15px rgb(131 131 133);
+}
+.name {
+  position: absolute;
 }
 .nav {
   /* padding-top: 20px;
-  padding-left: 70px; */
-  margin-top: -120px;
-  margin-left: 112px;
+  /* padding-left: 70px; */
+  /*margin-top: -120px;
+  margin-left: 112px; */
   width: min-content;
   height: min-content;
   text-align: left;
+}
+.nav .nav-list {
+  padding: 42px 0 0 112px;
 }
 .nav a {
   font-size: 15px;
@@ -87,4 +93,70 @@ table {
 }
 .dots .dot:nth-child(3) {
   animation: dotanime 1s linear 0.66s infinite;
+}
+
+/* ======================================================= */
+ul.social {
+  display: flex;
+  justify-content: space-around;
+  position: fixed;
+  bottom: 20px;
+  right: 10px;
+  width: 20vw;
+}
+
+ul.social li {
+  list-style: none;
+}
+
+ul.social li a {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  display: block;
+  text-align: center;
+  border-radius: 50%;
+  padding: 5px;
+  box-sizing: border-box;
+  text-decoration: none;
+  box-shadow: 0 10px 15px rgb(0 0 0 / 30%);
+  background: linear-gradient(0deg, #ddd, #fff);
+  transition: 0.5s;
+}
+
+ul.social li a:hover {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  text-decoration: none;
+}
+
+ul.social li a .fa {
+  width: 100%;
+  height: 100%;
+  display: block;
+  background: linear-gradient(0deg, #fff, #ddd);
+  border-radius: 50%;
+  line-height: calc(45px - 7px);
+  font-size: 18px;
+  color: #262626;
+  transition: 0.2s;
+}
+
+ul.social li:nth-child(1) a:hover .fa {
+  color: #3b5998;
+}
+
+ul.social li:nth-child(2) a:hover .fa {
+  color: #00aced;
+}
+
+ul.social li:nth-child(3) a:hover .fa {
+  color: #dd4b39;
+}
+
+ul.social li:nth-child(4) a:hover .fa {
+  color: #007bb6;
+}
+
+ul.social li:nth-child(5) a:hover .fa {
+  color: #e4405f;
 }
